// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ./components/button/demo/basic.md correctly 1`] = `
<div>
  <button type="button" class="ant-btn ant-btn-primary"><span>Primary</span></button>
  <button type="button" class="ant-btn ant-btn-default"><span>Default</span></button>
  <button type="button" class="ant-btn ant-btn-dashed"><span>Dashed</span></button>
  <button type="button" class="ant-btn ant-btn-danger"><span>Danger</span></button>
</div>
`;

exports[`renders ./components/button/demo/block.md correctly 1`] = `
<div>
  <button type="button" class="ant-btn ant-btn-primary ant-btn-block"><span>Primary</span></button>
  <button type="button" class="ant-btn ant-btn-default ant-btn-block"><span>Default</span></button>
  <button type="button" class="ant-btn ant-btn-dashed ant-btn-block"><span>Dashed</span></button>
  <button type="button" class="ant-btn ant-btn-danger ant-btn-block"><span>danger</span></button>
</div>
`;

exports[`renders ./components/button/demo/button-group.md correctly 1`] = `
<div id="components-button-demo-button-group">
  <h4>Basic</h4>
  <div class="ant-btn-group">
    <button type="button" class="ant-btn ant-btn-default"><span>Cancel</span></button>
    <button type="button" class="ant-btn ant-btn-primary"><span>OK</span></button>
  </div>
  <div class="ant-btn-group">
    <button type="button" disabled="disabled" class="ant-btn ant-btn-default"><span>L</span></button>
    <button type="button" disabled="disabled" class="ant-btn ant-btn-default"><span>M</span></button>
    <button type="button" disabled="disabled" class="ant-btn ant-btn-default"><span>R</span></button>
  </div>
  <div class="ant-btn-group">
    <button type="button" class="ant-btn ant-btn-primary"><span>L</span></button>
    <button type="button" class="ant-btn ant-btn-default"><span>M</span></button>
    <button type="button" class="ant-btn ant-btn-default"><span>M</span></button>
    <button type="button" class="ant-btn ant-btn-dashed"><span>R</span></button>
  </div>
  <h4>With Icon</h4>
  <div class="ant-btn-group">
    <button type="button" class="ant-btn ant-btn-primary">
      <i class="anticon anticon-left"></i>Go back
    </button>
    <button type="button" class="ant-btn ant-btn-primary">
      Go forward
      <i class="anticon anticon-right"></i>
    </button>
  </div>
  <div class="ant-btn-group">
    <button type="button" class="ant-btn ant-btn-primary">
      <i class="anticon anticon-cloud"></i>
    </button>
    <button type="button" class="ant-btn ant-btn-primary">
      <i class="anticon anticon-cloud-download"></i>
    </button>
  </div>
</div>
`;

exports[`renders ./components/button/demo/disabled.md correctly 1`] = `
<div>
  <button type="button" class="ant-btn ant-btn-primary"><span>Primary</span></button>
  <button type="button" disabled="disabled" class="ant-btn ant-btn-primary"><span>Primary(disabled)</span></button>
  <br>
  <button type="button" class="ant-btn ant-btn-default"><span>Default</span></button>
  <button type="button" disabled="disabled" class="ant-btn ant-btn-default"><span>Default(disabled)</span></button>
  <br>
  <button type="button" class="ant-btn ant-btn-dashed"><span>Dashed</span></button>
  <button type="button" disabled="disabled" class="ant-btn ant-btn-dashed"><span>Dashed(disabled)</span></button>
  <div style="padding: 8px 8px 0px 8px; background: rgb(190, 200, 200);">
    <button type="button" class="ant-btn ant-btn-default ant-btn-background-ghost"><span>Ghost</span></button>
    <button type="button" disabled="disabled" class="ant-btn ant-btn-default ant-btn-background-ghost"><span>Ghost(disabled)</span></button>
  </div>
</div>
`;

exports[`renders ./components/button/demo/ghost.md correctly 1`] = `
<div style="background: rgb(190, 200, 200); padding: 26px 16px 16px;">
  <button type="button" class="ant-btn ant-btn-primary ant-btn-background-ghost"><span>Primary</span></button>
  <button type="button" class="ant-btn ant-btn-default ant-btn-background-ghost"><span>Default</span></button>
  <button type="button" class="ant-btn ant-btn-dashed ant-btn-background-ghost"><span>Dashed</span></button>
  <button type="button" class="ant-btn ant-btn-danger ant-btn-background-ghost"><span>danger</span></button>
</div>
`;

exports[`renders ./components/button/demo/icon.md correctly 1`] = `
<div>
  <button type="button" class="ant-btn ant-btn-primary ant-btn-circle">
    <i class="anticon anticon-search"></i>
  </button>
  <button type="button" class="ant-btn ant-btn-primary">
    <i class="anticon anticon-search"></i><span>Search</span></button>
  <button type="button" class="ant-btn ant-btn-default ant-btn-circle">
    <i class="anticon anticon-search"></i>
  </button>
  <button type="button" class="ant-btn ant-btn-default">
    <i class="anticon anticon-search"></i><span>Search</span></button>
  <button type="button" class="ant-btn ant-btn-default ant-btn-circle">
    <i class="anticon anticon-search"></i>
  </button>
  <button type="button" class="ant-btn ant-btn-default">
    <i class="anticon anticon-search"></i><span>Search</span></button>
  <button type="button" class="ant-btn ant-btn-dashed ant-btn-circle">
    <i class="anticon anticon-search"></i>
  </button>
  <button type="button" class="ant-btn ant-btn-dashed">
    <i class="anticon anticon-search"></i><span>Search</span></button>
</div>
`;

exports[`renders ./components/button/demo/loading.md correctly 1`] = `
<div>
  <button type="button" class="ant-btn ant-btn-primary ant-btn-loading">
    <i class="anticon anticon-loading anticon-spin"></i><span>Loading</span></button>
  <button type="button" class="ant-btn ant-btn-primary ant-btn-sm ant-btn-loading">
    <i class="anticon anticon-loading anticon-spin"></i><span>Loading</span></button>
  <br>
  <button type="button" class="ant-btn ant-btn-primary"><span>mouseenter me!</span></button>
  <button type="button" class="ant-btn ant-btn-primary">
    <i class="anticon anticon-poweroff"></i><span>延迟1s</span></button>
  <br>
  <button type="button" class="ant-btn ant-btn-default ant-btn-circle ant-btn-loading">
    <i class="anticon anticon-loading anticon-spin"></i>
  </button>
  <button type="button" class="ant-btn ant-btn-primary ant-btn-circle ant-btn-loading">
    <i class="anticon anticon-loading anticon-spin"></i>
  </button>
</div>
`;

exports[`renders ./components/button/demo/multiple.md correctly 1`] = `
<div>
  <button type="button" class="ant-btn ant-btn-primary"><span>Primary</span></button>
  <button type="button" class="ant-btn ant-btn-default"><span>secondary</span></button>
  <button type="button" class="ant-btn ant-btn-default ant-dropdown-trigger">
    Actions
    <i class="anticon anticon-down"></i>
  </button>
</div>
`;

exports[`renders ./components/button/demo/size.md correctly 1`] = `
<div>
  <div class="ant-radio-group ant-radio-group-outline ant-radio-group-default">
    <label class="ant-radio-button-wrapper ant-radio-button-wrapper-checked"><span class="ant-radio-button ant-radio-button-checked"><input type="radio" class="ant-radio-button-input" value="large"><span class="ant-radio-button-inner"></span></span><span>Large</span></label>
    <label class="ant-radio-button-wrapper"><span class="ant-radio-button"><input type="radio" class="ant-radio-button-input" value="default"><span class="ant-radio-button-inner"></span></span><span>Default</span></label>
    <label class="ant-radio-button-wrapper"><span class="ant-radio-button"><input type="radio" class="ant-radio-button-input" value="small"><span class="ant-radio-button-inner"></span></span><span>Small</span></label>
  </div>
  <br>
  <br>
  <button type="button" class="ant-btn ant-btn-primary ant-btn-lg"><span>Primary</span></button>
  <button type="button" class="ant-btn ant-btn-default ant-btn-lg"><span>Normal</span></button>
  <button type="button" class="ant-btn ant-btn-dashed ant-btn-lg"><span>Dashed</span></button>
  <button type="button" class="ant-btn ant-btn-danger ant-btn-lg"><span>Danger</span></button>
  <br>
  <button type="button" class="ant-btn ant-btn-primary ant-btn-circle ant-btn-lg">
    <i class="anticon anticon-download"></i>
  </button>
  <button type="button" class="ant-btn ant-btn-primary ant-btn-lg">
    <i class="anticon anticon-download"></i><span>Download</span></button>
  <br>
  <div class="ant-btn-group ant-btn-group-lg">
    <button type="button" class="ant-btn ant-btn-primary">
      <i class="anticon anticon-left"></i>Backward
    </button>
    <button type="button" class="ant-btn ant-btn-primary">
      Forward
      <i class="anticon anticon-right"></i>
    </button>
  </div>
</div>
`;
